Added lots of stuff
Project idea, stakeholders, user research methods, user research method 1.

--- a/p1.md
+++ b/p1.md
@@ -1,22 +1,62 @@
-# P1: User Research
+# P1: Animal Genealogy Mobile App
 
 ## Project Idea
 
-_a succinct description of your project idea, how you expect your system to be used, by whom, and the context under which you expect it to be used_ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
+This project is a mobile application on Android geared towards enthusiasts, hobbyists and heritage animal breeders. This application is a visual family-tree based, genealogical overview of all the user’s animals over time. It is intended to be a lightweight application that can be run on any android platform using a visually lightweight UX to simplify and streamline the task of genealogy bookkeeping. 
+This application will be used by those who are looking for a way to easily view all of their past and previous animals, and calculate their inbreeding coefficient, a common concern in small breeders. This application is not intended to be used on a very large scale or by corporate animal breeders, nor is it intended to be used for genetic haplotyping by agricultural scientists.  
+The app is being commissioned by the American Kennel Club in order to better track family trees in registered and small breeders, to combat increasing inbreeding issues, as well as to better track animals after they have been rehomed to new owners out of contact with the original breeders. In addition, scientists and agricultural statistics analysist at Agriculture and Agri-Food Canada have expressed their interest in the app and its potential to increase the pool of genetically valuable animal stock at the consumer level. Several other stakeholders have expressed interest in the application, acknowledging that there has been unfilled gap in the tech application market  for animal genealogy since the 1980s. 
+
 
 ## Stakeholders and Users
 
-_provide a list of stakeholders, and describe them as they relate to the design of the system_ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
+The primary users of this app are the breeders themselves. The primary stakeholders in the development in the app will be the American Kennel Club, and likely any other kennel club or species registry that wishes to adopt this application for use. Other users and stakeholders  of the app may include, but are not limited to: clients who which to peruse their animal’s heritage before buying, Purebreed clubs, farmers and ranchers who keep livestock, small private breeding companies, specialists in animal artificial insemination, breeding industry consultants, biology and genetics teachers, etc. 
+For the sake of analysis, the project will focus on the following users and stakeholders: small and reputable breeders of varying species, customers of breeders, ranchers of large livestock, and pedigree club breeders, and the American Kennel Club. The following table will identify these key stakeholders and users, and relevant information that may impact the design and use of the app. (See Fig. 1) 
+
 
 ## User Research Methods
 
-_discuss the user research methods you used, provide justification for them_ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
+The following user research methods were chosen to research the problem of animal genealogy: Interview (Ask) , Historical Analysis (Learn) , and Competitive Product Survey (Learn).
 
-### User Research Method 1: ...
+Because of the niche nature of animal breeding and the long-term nature of the practice, it is very difficult to put into practice many of the methods from the Look and Try categories of IDEO methods. Since the demographic of animal breeders targeted by this app is made up of mostly enthusiasts and registered, established single breeders, it is much more viable to utilize methods from the Ask category. However, it was difficult to contact established breeders and veterinarians on short notice. Therefore, only one Ask IDEO method was employed. In contrast, because there is a well recorded tradition of animal breeding due to the establishment of many kennel clubs, purebred registries, and agricultural livestock syndicates, it is significantly easier to look into historical records of breeding methods and habits, utilizing the Historical Analysis method. In addition, because this app is aimed at a very specific niche market, it is very easy to research any direct product competitors available to animal breeders. Thus, the Competitive Product Survey was chosen as a counterpart to the historical nature of the Historical Analysis method. 
+
+
+### User Research Method 1: Interview - Ask
 
 ![](http://lorempixel.com/1200/300/ "Motivational image")
 
-_summary of findings_ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
+The task of tracking animal genealogy is often that of a mental exercise, and it is difficult to observe this during the mundane everyday tasks and routine of taking care of various animals. As learned from secondary research, many animal breeders are from older generations and may use their own proprietary methods of keeping track of their breeding stock by hand. It is important to know what access to technology these people have and if they would even be willing to attempt to move their (possibly decades or more) of breeding logs into an electronic form. Furthermore, it may be difficult to find breeders willing to show us their logs, and breeders of farm animals mostly live too far away for us to physically meet them.
+
+The interview was conducted on a cat breeder registered under TICA (The International Cat Association) known to a group member through family. 
+
+Q: How do you keep track of the genealogy of your animals?
+•	Just going to do it by hand.
+
+Q: What issues do you have with this method?
+•	When a cat registered through TICA, only the parents of the cat are listed, and a full genealogy is only available through them at a cost. 
+•	Usually only 5 generations of a cat's genealogy are tracked through TICA.
+•	Cannot request genealogy of a cat that you do not own, except by contacting the breeder/owner of the cat.
+•	Usually want more than 3 generations of separation.
+
+Q: What would you like a genealogy app to do for you?
+•	Literally anything above the bare minimum would be better than using TICA.
+•	Must mail everything into TICA, if you are outside of the US, you must pull out American currency from the bank and send it to them as payment.
+•	It can be difficult to find other breeders - much information is spread by word of mouth.
+•	Very hard to verify that other breeders are actually registered purebreds.
+ 
+Q: Have you ever had any issues with inbreeding?
+•	No, but because most breeder info is passed by word of mouth, it is very easy to scam other breeders into cross-breeding with unregistered cats.
+Q: Do you think these issues could have been avoided with a proper genetic history of
+your animals?
+•	Yes, absolutely.
+ 
+ Additional Notes 
+•	Many breeders are our parents age and are not as proficient with technology.
+o	Maybe have a website and mobile app.
+•	TICA has a list of breeders in alphabetical order, but no other information on the breeder or their location.
+
+Summary 
+During this interview with a cat breeder, we learned that, for the cat breeding registry TICA, much of the pedigree information that is necessary for the operation of breeders is very difficult to obtain, and sometimes impossible. There is a large problem with finding the reputability of breeders and whether their animals are registered or not, and the information that can be found is very slow to communicate. It seems that most breeder information is passed by word of both because there are no adequate listings for registered breeders under the TICA. Most breeders are an older generation, which may suggest why these communication methods have worked for so long; however, there is demand for an animal genealogy app because there is nothing else available. 
+
 
 ### User Research Method 2: ...
 
