--- a/p1.md
+++ b/p1.md
@@ -13,6 +13,9 @@ The primary users of this app are the breeders themselves. The primary stakehold
 For the sake of analysis, the project will focus on the following users and stakeholders: small and reputable breeders of varying species, customers of breeders, ranchers of large livestock, and pedigree club breeders, and the American Kennel Club. The following table will identify these key stakeholders and users, and relevant information that may impact the design and use of the app. (See Fig. 1) 
 
 
+Fig 1. Key stakeholders and users of the animal genealogy mobile app and their prior expertise in the animal breeding field, background knowledge of any animal genealogy applications, and familiarity with mobile applications.
+
+
 ## User Research Methods
 
 The following user research methods were chosen to research the problem of animal genealogy: Interview (Ask) , Historical Analysis (Learn) , and Competitive Product Survey (Learn).
