--- a/p1.md
+++ b/p1.md
@@ -13,6 +13,8 @@ The primary users of this app are the breeders themselves. The primary stakehold
 For the sake of analysis, the project will focus on the following users and stakeholders: small and reputable breeders of varying species, customers of breeders, ranchers of large livestock, and pedigree club breeders, and the American Kennel Club. The following table will identify these key stakeholders and users, and relevant information that may impact the design and use of the app. (See Fig. 1) 
 
 
+
+
 ## User Research Methods
 
 The following user research methods were chosen to research the problem of animal genealogy: Interview (Ask) , Historical Analysis (Learn) , and Competitive Product Survey (Learn).
@@ -29,30 +31,30 @@ The task of tracking animal genealogy is often that of a mental exercise, and it
 The interview was conducted on a cat breeder registered under TICA (The International Cat Association) known to a group member through family. 
 
 Q: How do you keep track of the genealogy of your animals?
-•	Just going to do it by hand.
+* Just going to do it by hand.
 
 Q: What issues do you have with this method?
-•	When a cat registered through TICA, only the parents of the cat are listed, and a full genealogy is only available through them at a cost. 
-•	Usually only 5 generations of a cat's genealogy are tracked through TICA.
-•	Cannot request genealogy of a cat that you do not own, except by contacting the breeder/owner of the cat.
-•	Usually want more than 3 generations of separation.
+* When a cat registered through TICA, only the parents of the cat are listed, and a full genealogy is only available through them at a cost. 
+* Usually only 5 generations of a cat's genealogy are tracked through TICA.
+* Cannot request genealogy of a cat that you do not own, except by contacting the breeder/owner of the cat.
+* Usually want more than 3 generations of separation.
 
 Q: What would you like a genealogy app to do for you?
-•	Literally anything above the bare minimum would be better than using TICA.
-•	Must mail everything into TICA, if you are outside of the US, you must pull out American currency from the bank and send it to them as payment.
-•	It can be difficult to find other breeders - much information is spread by word of mouth.
-•	Very hard to verify that other breeders are actually registered purebreds.
+* Literally anything above the bare minimum would be better than using TICA.
+* Must mail everything into TICA, if you are outside of the US, you must pull out American currency from the bank and send it to them as payment.
+* It can be difficult to find other breeders - much information is spread by word of mouth.
+* Very hard to verify that other breeders are actually registered purebreds.
  
 Q: Have you ever had any issues with inbreeding?
-•	No, but because most breeder info is passed by word of mouth, it is very easy to scam other breeders into cross-breeding with unregistered cats.
+* No, but because most breeder info is passed by word of mouth, it is very easy to scam other breeders into cross-breeding with unregistered cats.
 Q: Do you think these issues could have been avoided with a proper genetic history of
 your animals?
-•	Yes, absolutely.
+* Yes, absolutely.
  
  Additional Notes 
-•	Many breeders are our parents age and are not as proficient with technology.
-o	Maybe have a website and mobile app.
-•	TICA has a list of breeders in alphabetical order, but no other information on the breeder or their location.
+* Many breeders are our parents age and are not as proficient with technology.
+  * Maybe have a website and mobile app.
+* TICA has a list of breeders in alphabetical order, but no other information on the breeder or their location.
 
 Summary 
 During this interview with a cat breeder, we learned that, for the cat breeding registry TICA, much of the pedigree information that is necessary for the operation of breeders is very difficult to obtain, and sometimes impossible. There is a large problem with finding the reputability of breeders and whether their animals are registered or not, and the information that can be found is very slow to communicate. It seems that most breeder information is passed by word of both because there are no adequate listings for registered breeders under the TICA. Most breeders are an older generation, which may suggest why these communication methods have worked for so long; however, there is demand for an animal genealogy app because there is nothing else available. 
