--- a/p1.md
+++ b/p1.md
@@ -28,7 +28,7 @@ Because of the niche nature of animal breeding and the long-term nature of the p
 
 ### User Research Method 1: Interview - Ask
 
-![](http://lorempixel.com/1200/300/ "Motivational image")
+![TICA issued family tree](https://mkoma808.github.io/481-T03-Group5/images/P1/IMG_2002.jpg)
 
 The task of tracking animal genealogy is often that of a mental exercise, and it is difficult to observe this during the mundane everyday tasks and routine of taking care of various animals. As learned from secondary research, many animal breeders are from older generations and may use their own proprietary methods of keeping track of their breeding stock by hand. It is important to know what access to technology these people have and if they would even be willing to attempt to move their (possibly decades or more) of breeding logs into an electronic form. Furthermore, it may be difficult to find breeders willing to show us their logs, and breeders of farm animals mostly live too far away for us to physically meet them.
 
