--- a/p1.md
+++ b/p1.md
@@ -56,6 +56,9 @@ Q: Do you think these issues could have been avoided with a proper genetic histo
 your animals?
 * Yes, absolutely.
 
+TICA certificates
+![](https://mkoma808.github.io/481-T03-Group5/images/P1/IMG_2004.jpg)
+
 Additional Notes 
 * Many breeders are our parents age and are not as proficient with technology.
   * Maybe have a website and mobile app.
